--- a/bounded-relative-finder.cabal
+++ b/bounded-relative-finder.cabal
@@ -25,14 +25,14 @@ source-repository head
 common depends
   build-depends: 
     base ^>= 4.14.1.0,
-    bytestring,
-    containers,
-    deepseq,
-    unordered-containers,
-    hashable,
-    mtl,
-    text,
-    vector
+    bytestring >= 0.10.12 && < 0.11,
+    containers >= 0.6.3.1 && < 0.7,
+    deepseq >= 1.4.4 && < 1.5,
+    unordered-containers >= 0.2.13 && < 0.3,
+    hashable >= 1.3.1 && < 1.4,
+    mtl >= 2.2.2 && < 2.3,
+    text ^>= 1.2.4 && < 1.3,
+    vector >= 0.12.3 && < 0.13
   ghc-options: -Wno-partial-type-signatures
   default-extensions: 
     DeriveFoldable,
